focuse change and fix bugs

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ה-אתר שיסדר לך את השמירות"
     />
     <title>Shmirot App</title>
   </head>
