--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="ה-אתר שיסדר לך את השמירות"
     />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <title>Shmirot App</title>
   </head>
   <body dir="rtl">
